--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+# Project Description
+# Healthcare Web Service with Spring Boot and MySQL
+spring.application.name = suppliers-backend
+# MySQL Database Configuration
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/suppliers
+spring.datasource.username = root
+spring.datasource.password = ahincho
+# Use Create Parameter to Create the Database and Schema
+spring.jpa.hibernate.ddl-auto = create
+# Use Update Parameter when Database is already created
+# spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+# Embedded Tomcat Server Port
+server.port = 8090
