--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.unsa</groupId>
 	<artifactId>suppliers</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>suppliers</name>
 	<description>Suppliers</description>
 	<properties>
