--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 # Healthcare Web Service with Spring Boot and MySQL
 spring.application.name = suppliers-backend
 # MySQL Database Configuration for Local Environment
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/suppliers
-spring.datasource.username = root
-spring.datasource.password = ahincho
-# MySQL Database Configuration for Cloud Environment
 # spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-# spring.datasource.url = ${DATABASE_URL:jdbc:mysql://bkqu08htrqmppyeyjmab-mysql.services.clever-cloud.com:3306/bkqu08htrqmppyeyjmab}
-# spring.datasource.username = ${DATABASE_USERNAME:u8jwnapiczighdxp}
-# spring.datasource.password = ${DATABASE_PASSWORD:KFGwiITYAgtlLIzEM4il}
+# spring.datasource.url = jdbc:mysql://localhost:3306/suppliers
+# spring.datasource.username = root
+# spring.datasource.password = ahincho
+# MySQL Database Configuration for Cloud Environment
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = ${DATABASE_URL:jdbc:mysql://bkqu08htrqmppyeyjmab-mysql.services.clever-cloud.com:3306/bkqu08htrqmppyeyjmab}
+spring.datasource.username = ${DATABASE_USERNAME:u8jwnapiczighdxp}
+spring.datasource.password = ${DATABASE_PASSWORD:KFGwiITYAgtlLIzEM4il}
 # Configuration of Database Pool Connection because Clever Cloud
 spring.datasource.hikari.maximum-pool-size = 1
 spring.datasource.hikari.minimum-idle = 1
